Variata la descrizione iniziale

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="box.css">
 </head>
 <body>
-<h1> The Box Model</h1>
+<h1> Benvenuti a casa mia!</h1>
 <!--img src="piantina_vmc.jpg"-->
 
   <a href="final.html">Other File</a>
