Inserito img src e altre informazioni di classe per image1

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="box.css">
 </head>
 <body>
+<img src=" " class = "image1">
 <h1> Benvenuti a casa mia!</h1>
 <!--img src="piantina_vmc.jpg"-->
 
