--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="box.css">
 </head>
 <body>
-<img src=" " class = "image1">
+<img src=" " class = "piantina_vmc.jpg">
 <h1> Benvenuti a casa mia!</h1>
 <!--img src="piantina_vmc.jpg"-->
 
